--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "${PROJECT_NAME}",
+  "name": "tarikh",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "3D музей истории Казахстана",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "private": true
+  "keywords": ["history", "3d", "museum", "kazakhstan", "archaeology"],
+  "author": "QazArch Team",
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
